# oh-my-pr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCAL_API.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  test.md
.github/workflows/: ci.yml  claude-code-review.yml  codex-code-review.yml  doc-review.yml  npm-publish.yml  (+2 more)
client/: index.html
docs/: index.html  native-app-framework-evaluation.md
dogfood-output/: report.md
script/: build-public-docs.ts  build.ts
server/: agentRunner.test.ts  agentRunner.ts  appRuntime.test.ts  appRuntime.ts  appUpdate.test.ts  appUpdate.ts  babysitter.test.ts  babysitter.ts  backgroundJobDispatcher.test.ts  backgroundJobDispatcher.ts  backgroundJobHandlers.test.ts  backgroundJobHandlers.ts  backgroundJobQueue.test.ts  backgroundJobQueue.ts  ciCheckIngestor.test.ts  ciCheckIngestor.ts  ciFailureClassifier.test.ts  ciFailureClassifier.ts  ciHealingAgent.test.ts  ciHealingAgent.ts  ciHealingManager.test.ts  ciHealingManager.ts  defaultConfig.test.ts  defaultConfig.ts  deploymentAdapters.test.ts  deploymentAdapters.ts  deploymentHealingAgent.test.ts  deploymentHealingAgent.ts  deploymentHealingManager.test.ts  deploymentHealingManager.ts  deploymentPlatformDetector.test.ts  deploymentPlatformDetector.ts  feedbackLifecycle.test.ts  feedbackLifecycle.ts  github.test.ts  github.ts  index.ts  localOnly.ts  manualFeedback.test.ts  manualFeedback.ts  (+28 more)
shared/: models.ts  schema.ts
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tasks/: lessons.md
(+77 files in other folders)
